# labels

./: .gitignore  .labelsrc  Cargo.toml  LICENSE  README.md
.github/workflows/: label.yml  labeler.yml  rust.yml
src/: cli.rs  config.rs  main.rs
src/cli/: mod.rs
src/cli/cmd/: mod.rs
src/cli/sub_cmd/: list.rs  remove.rs  update.rs
src/label/: config.rs  error.rs  github.rs  mod.rs
src/labels/: config.rs  error.rs  github.rs  mod.rs
