[package]
name = "labels"
version = "0.5.0"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2021"

publish = false
description = "CLI utility to update labels in GitHub repo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo", "deprecated"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
terminal-spinners = "0.3.2"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#build-dependencies
[target.'cfg(unix)'.build-dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
